--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "url": "https://github.com/JasonBai007/baipress/issues"
   },
   "homepage": "https://github.com/JasonBai007/baipress#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0"
+  }
 }
