--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "src:dev": "vuepress dev src",
+    "src:build": "vuepress build src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
